[gd_scene load_steps=3 format=3 uid="uid://7w4xl4svj77j"]

[ext_resource type="Script" path="res://ui/ui_main_menu/ui-main-menu.gd" id="1_jee1g"]
[ext_resource type="Script" path="res://ui/ui_main_menu/signals/c-signals-main-menu.gd" id="2_m7p80"]

[node name="UIMainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jee1g")

[node name="cSig" type="Node" parent="."]
script = ExtResource("2_m7p80")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2

[node name="UILabelGameName" type="Label" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="UIButtonNew" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../UIButtonLoad")
focus_next = NodePath("../UIButtonLoad")
focus_previous = NodePath("../UIButtonQuit")
text = "ui_new_game"

[node name="UIButtonLoad" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../UIButtonNew")
focus_neighbor_bottom = NodePath("../UIButtonSettings")
focus_next = NodePath("../UIButtonSettings")
focus_previous = NodePath("../UIButtonNew")
text = "ui_load_game"

[node name="UIButtonSettings" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../UIButtonLoad")
focus_neighbor_bottom = NodePath("../UIButtonQuit")
focus_next = NodePath("../UIButtonQuit")
focus_previous = NodePath("../UIButtonLoad")
text = "ui_settings"

[node name="UIButtonQuit" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../UIButtonSettings")
focus_next = NodePath("../UIButtonNew")
focus_previous = NodePath("../UIButtonSettings")
text = "ui_quit"

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/UIButtonNew" to="cSig" method="_on_ui_button_new_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/UIButtonSettings" to="cSig" method="_on_ui_button_settings_pressed"]
[connection signal="visibility_changed" from="Panel/CenterContainer/VBoxContainer/UIButtonSettings" to="cSig" method="_on_ui_button_settings_visibility_changed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/UIButtonQuit" to="cSig" method="_on_ui_button_quit_pressed"]
